--- a/UC2-Contactpagina/Showcase-Contactpagina/Views/Contact/Index.cshtml
+++ b/UC2-Contactpagina/Showcase-Contactpagina/Views/Contact/Index.cshtml
@@ -22,12 +22,12 @@
 
             <div class="form-contactpagina__inputelement fx-col">
                 <label for="email">E-mailadres: </label>
-                <input type="email" asp-for="Email" name="email" id="email">
+                <input type="email" asp-for="Email" name="email" id="email" required>
             </div>
 
             <div class="form-contactpagina__inputelement fx-col">
                 <label for="phone">Telefoonnummer: </label>
-                <input type="tel" asp-for="Phone" name="phone" id="phone">
+                <input type="tel" asp-for="Phone" name="phone" id="phone" required>
             </div>
 
             <div class="form-contactpagina__inputelement">
