--- a/UC1-Profielpagina/Showcase-Profielpagina/Views/Home/Index.cshtml
+++ b/UC1-Profielpagina/Showcase-Profielpagina/Views/Home/Index.cshtml
@@ -5,8 +5,8 @@
 <div class="page">
     <section class="personalia">
 
-        <img class="person-logo" src="images/person-pasfoto.png">
-        <h1 class="person-name">Linde Eikenboom</h1>
+        <img class="person-logo" src="images/BierBuddy Logo.png">
+        <h1 class="person-name">Milan Denk</h1>
 
     </section>
 
@@ -23,10 +23,11 @@
                 <div class="profile-content__element-header">
                 </div>
                 <p class="profile-content__description">
-                    Als arts en developer ben ik bekwaam in het onderzoeken van
-                    de medische context en het zoeken van een technische oplossing.
+                    Momenteel studerend in de ICT en werkend in de zorg.
+                    
                 <p>
             </div>
+
 
 
             <div class="profile-content__category">
@@ -36,19 +37,49 @@
 
             <div class="profile-content__element">
                 <div class="profile-content__element-header">
-                    <h4 class="profile-content__title">Farmacie</h4>
-                    <p class="profile-content__period">nov 2021 - mei 2022</p>
+                    <h4 class="profile-content__title">HBO ICT</h4>
+                    <p class="profile-content__period">sept 2023 - 2027</p>
                 </div>
-                <p class="profile-content__institute">Universiteit Utrecht, Utrecht</p>
+                <p class="profile-content__institute">Hogeschool Windesheim, Zwolle</p>
             </div>
 
             <div class="profile-content__element">
                 <div class="profile-content__element-header">
-                    <h4 class="profile-content__title">Onderzoeker</h4>
-                    <p class="profile-content__period">jan 2020 - feb 2021</p>
+                    <h4 class="profile-content__title">Havo</h4>
+                    <p class="profile-content__period">Aug 2018 - Juni 2023</p>
                 </div>
-                <p class="profile-content__institute">Lindeboom instituut, Utrecht</p>
+                <p class="profile-content__institute">RSG Slingerbos, Harderwijk</p>
             </div>
+
+            <div class="profile-content__category">
+                <h3 class="profile-content__category-title">Werkervaring</h3>
+                <hr>
+            </div>
+
+            <div class="profile-content__element">
+                <div class="profile-content__element-header">
+                    <h4 class="profile-content__title">Assistent begeleider B</h4>
+                    <p class="profile-content__period">Juli 2024 - Heden</p>
+                </div>
+                <p class="profile-content__institute">'s Heeren Loo, Ermelo</p>
+            </div>
+
+            <div class="profile-content__element">
+                <div class="profile-content__element-header">
+                    <h4 class="profile-content__title">Zorg- en welzijnsassistent</h4>
+                    <p class="profile-content__period">Juni 2023 - Juli 2024</p>
+                </div>
+                <p class="profile-content__institute">'s Heeren Loo, Ermelo</p>
+            </div>
+
+            <div class="profile-content__element">
+                <div class="profile-content__element-header">
+                    <h4 class="profile-content__title">Vakkenvuller</h4>
+                    <p class="profile-content__period">Feb 2022 - Mei 2023</p>
+                </div>
+                <p class="profile-content__institute">Jumbo Tweelingstad, Harderwijk</p>
+            </div>
+
         </section>
 
     </section>
